# D2RSO-py

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  release.yml
assets/skills/: README.md
packaging/: d2rso.spec
planning/: daily-board.csv
planning/csv/: d2rso-python-project-board.csv  d2rso_python_rich_import.csv  roadmap-board.csv
planning/documents/: agent_onboard_and_task_planning.md  dependency_rationale.md  github_actions_guide.md  mvp_checklist_snapshot.md  mvp_manual_test_checklist.md  mvp_manual_test_steps.md  roadmap_to_daily.md  windows_dev_environment_guide.md  windows_install_uninstall_guide.md
scripts/: archive_dist.py  build_windows_bundle.py  debug_gamepad_events.py  pre_ci_core_logic.sh  smoke_test_packaged_app.py
src/d2rso/: __init__.py  __main__.py  countdown_service.py  input_events.py  input_router.py  key_icon_registry.py  main.py  main_window.py  models.py  options_dialog.py  overlay_window.py  settings_store.py  tracker_engine.py  tracker_runtime.py
tests/: test_countdown_service.py  test_imports.py  test_input_events.py  test_input_router.py  test_key_icon_registry.py  test_main_window.py  test_models.py  test_overlay_window.py  test_packaging_support.py  test_settings_store.py  test_tracker_engine.py  test_tracker_runtime.py
