[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2rso"
version = "0.1.0"
description = "Placeholder GUI shell for the D2RSO application."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["d2rso", "gui", "placeholder"]
authors = [{ name = "D2RSO Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3.0",
    "black>=24.2",
    "mypy>=1.8",
]

[project.scripts]
d2rso = "d2rso.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = false
